Finaliza codificação da versão 1.0 com últimas refatorações.